# QtProject

./: .gitignore  CMakeLists.txt  README.md  databasetabwidget.cpp  databasetabwidget.h  databasetabwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
forms/: basetabwidget.ui  databasetabwidget.ui  destinationselectiondialog.ui  entryselectiondialog.ui  mainwindow.ui  newdestinationentrydialog.ui  newtouristentrydialog.ui  newtouristpackageentrydialog.ui  reportdialog.ui  touristselectiondialog.ui
include/: datastorage.h  mainwindow.h
include/dialogs/: basechartdialog.h  baseentrydialog.h  destinationchartdialog.h  entryselectiondialog.h  newdestinationentrydialog.h  newtouristentrydialog.h  newtouristpackageentrydialog.h  reportdialog.h  touristchartdialog.h  touristpackagechartdialog.h
include/models/: basetablemodel.h  destinationtablemodel.h  touristpackagemodel.h  touristtablemodel.h
include/util/: enumlabels.h  reportformatters.h  softregexvalidator.h
include/widgets/: basetabwidget.h  databasetabwidget.h  destinationtabwidget.h  touristpackagetabwidget.h  touristtabwidget.h
resources/: QtProject.desktop
src/: datastorage.cpp  mainwindow.cpp
src/dialogs/: basechartdialog.cpp  baseentrydialog.cpp  destinationchartdialog.cpp  entryselectiondialog.cpp  newdestinationentrydialog.cpp  newtouristentrydialog.cpp  newtouristpackageentrydialog.cpp  reportdialog.cpp  touristchartdialog.cpp  touristpackagechartdialog.cpp
src/models/: basetablemodel.cpp  destinationtablemodel.cpp  touristpackagetablemodel.cpp  touristtablemodel.cpp
src/util/: reportformatters.cpp  softregexvalidator.cpp
src/widgets/: basetabwidget.cpp  databasetabwidget.cpp  destinationtabwidget.cpp  touristpackagetabwidget.cpp  touristtabwidget.cpp
